<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="@dimen/aidl_demo_common_padding">

    <Button
        android:id="@+id/remote_bind"
        android:layout_width="match_parent"
        android:layout_height="@dimen/aidl_demo_btn_height"
        android:text="@string/remote_bind"/>

    <Button
        android:id="@+id/remote_unbind"
        android:layout_width="match_parent"
        android:layout_height="@dimen/aidl_demo_btn_height"
        android:text="@string/remote_unbind"/>

    <Button
        android:id="@+id/remote_get_service_info"
        android:layout_width="match_parent"
        android:layout_height="@dimen/aidl_demo_btn_height"
        android:text="@string/remote_get_info"/>

    <Button
        android:id="@+id/remote_deliver_data"
        android:layout_width="match_parent"
        android:layout_height="@dimen/aidl_demo_btn_height"
        android:text="@string/remote_deliver_data"/>
    <TextView
        android:id="@+id/remote_info"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"/>

</LinearLayout>