<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="@dimen/aidl_demo_common_padding">

    <Button
        android:id="@+id/main_local_service"
        android:layout_width="match_parent"
        android:layout_height="@dimen/aidl_demo_btn_height"
        android:text="@string/aidl_demo_ibinder"/>

    <Button
        android:id="@+id/main_messenger"
        android:layout_width="match_parent"
        android:layout_height="@dimen/aidl_demo_btn_height"
        android:text="@string/aidl_demo_messenger"/>

    <Button
        android:id="@+id/main_adil"
        android:layout_width="match_parent"
        android:layout_height="@dimen/aidl_demo_btn_height"
        android:text="@string/aidl_demo_aidl"/>

</LinearLayout>